// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function Reflection should compile curried function: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: curriedFunction()

Comments for main curriedFunction

## Call Signature

> **curriedFunction**(\`searchElement\`): \\<\`Value\`\\>(\`iterable\`) => \`boolean\`

Comments for current function 1

### Parameters

#### searchElement

\`unknown\`

### Returns

\`Function\`

#### Type Parameters

• **Value**

#### Parameters

##### iterable

\`Iterable\`\\<\`Value\`, \`any\`, \`any\`\\>

Comments for iterable arg

#### Returns

\`boolean\`

### Source

[functions.ts:1](http://source-url)

## Call Signature

> **curriedFunction**\\<\`Value\`\\>(\`searchElement\`, \`iterable\`): \`string\`

### Type Parameters

• **Value**

### Parameters

#### searchElement

\`unknown\`

#### iterable

\`Iterable\`\\<\`Value\`, \`any\`, \`any\`\\>

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile curried function: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: curriedFunction()

Comments for main curriedFunction

## Call Signature

\`\`\`ts
function curriedFunction(searchElement: unknown): <Value>(iterable: Iterable<Value, any, any>) => boolean
\`\`\`

Comments for current function 1

### Parameters

| Parameter | Type |
| :------ | :------ |
| \`searchElement\` | \`unknown\` |

### Returns

\`Function\`

#### Type Parameters

| Type Parameter |
| :------ |
| \`Value\` |

#### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`iterable\` | \`Iterable\`\\<\`Value\`, \`any\`, \`any\`\\> | Comments for iterable arg |

#### Returns

\`boolean\`

### Source

[functions.ts:1](http://source-url)

## Call Signature

\`\`\`ts
function curriedFunction<Value>(searchElement: unknown, iterable: Iterable<Value, any, any>): string
\`\`\`

### Type Parameters

| Type Parameter |
| :------ |
| \`Value\` |

### Parameters

| Parameter | Type |
| :------ | :------ |
| \`searchElement\` | \`unknown\` |
| \`iterable\` | \`Iterable\`\\<\`Value\`, \`any\`, \`any\`\\> |

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a function: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAFunction()

> **functionReturningAFunction**(): \\<\`T\`\\>(\`x\`) => \`boolean\`

Comments for function

## Returns

\`Function\`

### Type Parameters

• **T**

### Parameters

#### x

\`string\`

### Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a function: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionReturningAFunction()

\`\`\`ts
function functionReturningAFunction(): <T>(x: string) => boolean
\`\`\`

Comments for function

## Returns

\`Function\`

### Type Parameters

| Type Parameter |
| :------ |
| \`T\` |

### Parameters

| Parameter | Type |
| :------ | :------ |
| \`x\` | \`string\` |

### Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a promise: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAPromise()

> **functionReturningAPromise**(): [\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\\{ \`prop\`: \`string\`; \\}\\>

Comments for function

## Returns

[\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\\{ \`prop\`: \`string\`; \\}\\>

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a promise: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionReturningAPromise()

\`\`\`ts
function functionReturningAPromise(): Promise<{
  prop: string;
}>
\`\`\`

Comments for function

## Returns

[\`Promise\`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)\\<\\{
  \`prop\`: \`string\`;
 \\}\\>

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a string: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAString()

> **functionReturningAString**(): \`string\`

Comments for function

## Returns

\`string\`

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a string: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionReturningAString()

\`\`\`ts
function functionReturningAString(): string
\`\`\`

Comments for function

## Returns

\`string\`

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a union: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAUnionType()

> **functionReturningAUnionType**(): \`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Comments for function

## Returns

\`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning a union: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionReturningAUnionType()

\`\`\`ts
function functionReturningAUnionType(): string | boolean | "string1" | "string2"
\`\`\`

Comments for function

## Returns

\`string\` \\| \`boolean\` \\| \`"string1"\` \\| \`"string2"\`

Return comments

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning an object: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionReturningAnObject()

> **functionReturningAnObject**(): \`object\`

Comments for function

## Returns

\`object\`

Return comments

### x

> **x**: \`number\` = \`1\`

### y

> **y**: \`number\` = \`2\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function returning an object: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionReturningAnObject()

\`\`\`ts
function functionReturningAnObject(): object
\`\`\`

Comments for function

## Returns

\`object\`

Return comments

| Name | Type | Default value |
| :------ | :------ | :------ |
| \`x\` | \`number\` | 1 |
| \`y\` | \`number\` | 2 |

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with a parameter: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: basicFunction()

> **basicFunction**(\`someParam\`): \`number\`

This is a function that is assigned to a variable.

## See

http://abc.com

## Parameters

### someParam

\`number\`

This is some numeric parameter.

## Returns

\`number\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with a parameter: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: basicFunction()

\`\`\`ts
function basicFunction(someParam: number): number
\`\`\`

This is a function that is assigned to a variable.

## See

http://abc.com

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`someParam\` | \`number\` | This is some numeric parameter. |

## Returns

\`number\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of optional stuff: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithArrayOfOptionalStuff()

> **functionWithArrayOfOptionalStuff**(\`a\`): \`void\`

Comments for array of stuff?

## Parameters

### a

[[\`Stuff\`](../type-aliases/Stuff.md)?]

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of optional stuff: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithArrayOfOptionalStuff()

\`\`\`ts
function functionWithArrayOfOptionalStuff(a: [Stuff?]): void
\`\`\`

Comments for array of stuff?

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`a\` | [[\`Stuff\`](../type-aliases/Stuff.md)?] |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of stuff: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithArrayOfStuff()

> **functionWithArrayOfStuff**(\`a\`): \`void\`

Comments for array of stuff

## Parameters

### a

[[\`Stuff\`](../type-aliases/Stuff.md)]

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of stuff: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithArrayOfStuff()

\`\`\`ts
function functionWithArrayOfStuff(a: [Stuff]): void
\`\`\`

Comments for array of stuff

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`a\` | [[\`Stuff\`](../type-aliases/Stuff.md)] |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of union stuff: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithArrayOfUnionStuff()

> **functionWithArrayOfUnionStuff**(\`a\`): \`void\`

Comments for array of union stuff

## Parameters

### a

[(\`null\` \\| [\`Stuff\`](../type-aliases/Stuff.md))?]

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with array of union stuff: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithArrayOfUnionStuff()

\`\`\`ts
function functionWithArrayOfUnionStuff(a: [(null | Stuff)?]): void
\`\`\`

Comments for array of union stuff

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`a\` | [(\`null\` \\| [\`Stuff\`](../type-aliases/Stuff.md))?] |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with complex params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithComplexParams()

> **functionWithComplexParams**(\`paramA\`, \`paramB\`): \`boolean\`

Function with function parmas

## Parameters

### paramA

(\`a\`) => \`true\`

### paramB

#### x

\`1\`

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with complex params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithComplexParams()

\`\`\`ts
function functionWithComplexParams(paramA: (a: string) => true, paramB: object): boolean
\`\`\`

Function with function parmas

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`paramA\` | (\`a\`: \`string\`) => \`true\` |
| \`paramB\` | \\{ \`x\`: \`1\`; \\} |
| \`paramB.x\` | \`1\` |

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with default parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithDefaultParameters()

> **functionWithDefaultParameters**(\`valueA\`, \`valueB\`, \`valueC\`, \`valueD\`, \`valueE\`, \`valueF\`): \`string\`

This is a function with a parameter that has a default value.

## Parameters

### valueA

\`string\` = \`'defaultValue'\`

A parameter with a default string value.

### valueB

\`number\` = \`100\`

A parameter with a default numeric value.

### valueC

\`number\` = \`Number.NaN\`

A parameter with a default NaN value.

### valueD

\`boolean\` = \`true\`

A parameter with a default boolean value.

### valueE

\`boolean\` = \`true\`

A parameter with a default null value.

### valueF

\`string\` = \`'<foo>'\`

## Returns

\`string\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with default parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithDefaultParameters()

\`\`\`ts
function functionWithDefaultParameters(
   valueA: string, 
   valueB: number, 
   valueC: number, 
   valueD: boolean, 
   valueE: boolean, 
   valueF: string): string
\`\`\`

This is a function with a parameter that has a default value.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`valueA\` | \`string\` | \`'defaultValue'\` | A parameter with a default string value. |
| \`valueB\` | \`number\` | \`100\` | A parameter with a default numeric value. |
| \`valueC\` | \`number\` | \`Number.NaN\` | A parameter with a default NaN value. |
| \`valueD\` | \`boolean\` | \`true\` | A parameter with a default boolean value. |
| \`valueE\` | \`boolean\` | \`true\` | A parameter with a default null value. |
| \`valueF\` | \`string\` | \`'<foo>'\` | - |

## Returns

\`string\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with multiple signatures: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithMultipleSignatures()

Main function comment.

## Call Signature

> **functionWithMultipleSignatures**(\`value\`): \`string\`

This is the first signature of a function with multiple signatures.

### Parameters

#### value

\`string\`

The name value.

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)

## Call Signature

> **functionWithMultipleSignatures**(\`value\`): \`string\`

This is the second signature of a function with multiple signatures.

### Parameters

#### value

An object containing the name value.

##### name

\`string\`

A value of the object.

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with multiple signatures: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithMultipleSignatures()

Main function comment.

## Call Signature

\`\`\`ts
function functionWithMultipleSignatures(value: string): string
\`\`\`

This is the first signature of a function with multiple signatures.

### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`value\` | \`string\` | The name value. |

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)

## Call Signature

\`\`\`ts
function functionWithMultipleSignatures(value: object): string
\`\`\`

This is the second signature of a function with multiple signatures.

### Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`value\` | \\{ \`name\`: \`string\`; \\} | An object containing the name value. |
| \`value.name\` | \`string\` | A value of the object. |

### Returns

\`string\`

### Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with named params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithNamedParams()

> **functionWithNamedParams**(\`__namedParameters\`, \`anotherParam\`): \`void\`

## Parameters

### \\_\\_namedParameters

various options

#### bar

\`number\` = \`43\`

#### foo

\`number\` = \`42\`

### anotherParam

\`string\`

Another param comment

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with named params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithNamedParams()

\`\`\`ts
function functionWithNamedParams(__namedParameters: object, anotherParam: string): void
\`\`\`

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`__namedParameters\` | \\{ \`bar\`: \`number\`; \`foo\`: \`number\`; \\} | various options |
| \`__namedParameters.bar\`? | \`number\` | - |
| \`__namedParameters.foo\`? | \`number\` | - |
| \`anotherParam\` | \`string\` | Another param comment |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with nested parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithNestedParameters()

> **functionWithNestedParameters**(\`params\`, \`context\`, \`somethingElse\`?): \`boolean\`

Some nested params.

## Parameters

### params

The parameters passed to the method.

#### name

\`string\`

The name of the new group.

#### nestedObj

\\{ \`name\`: \`string\`; \`obj\`: \\{ \`name\`: () => \`void\`; \\}; \`value\`: \`number\`; \\}

A nested object.

#### nestedObj.name

\`string\`

#### nestedObj.obj

\\{ \`name\`: () => \`void\`; \\}

#### nestedObj.obj.name

() => \`void\`

#### nestedObj.value

\`number\`

#### parent

\`number\`

### context

\`any\`

The context of the method call.

### somethingElse?

\`string\`

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with nested parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithNestedParameters()

\`\`\`ts
function functionWithNestedParameters(
   params: object, 
   context: any, 
   somethingElse?: string): boolean
\`\`\`

Some nested params.

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`params\` | \\{ \`name\`: \`string\`; \`nestedObj\`: \\{ \`name\`: \`string\`; \`obj\`: \\{ \`name\`: () => \`void\`; \\}; \`value\`: \`number\`; \\}; \`parent\`: \`number\`; \\} | The parameters passed to the method. |
| \`params.name\` | \`string\` | The name of the new group. |
| \`params.nestedObj\` | \\{ \`name\`: \`string\`; \`obj\`: \\{ \`name\`: () => \`void\`; \\}; \`value\`: \`number\`; \\} | A nested object. |
| \`params.nestedObj.name\`? | \`string\` | - |
| \`params.nestedObj.obj\`? | \\{ \`name\`: () => \`void\`; \\} | - |
| \`params.nestedObj.obj.name\`? | () => \`void\` | - |
| \`params.nestedObj.value\`? | \`number\` | - |
| \`params.parent\`? | \`number\` | - |
| \`context\`? | \`any\` | The context of the method call. |
| \`somethingElse\`? | \`string\` | - |

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithOptionalParameters()

> **functionWithOptionalParameters**(\`firstParamWithDefault\`, \`requiredParam\`, \`optionalParam\`?, \`paramWithDefault\`?): \`void\`

This is a function with a parameters.

## Parameters

### firstParamWithDefault

\`boolean\` = \`true\`

### requiredParam

\`string\`

A normal parameter.

### optionalParam?

\`string\`

An optional parameter.

### paramWithDefault?

\`number\` = \`0\`

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "1") 2`] = `
"# Function: functionWithOptionalParameters()

> **functionWithOptionalParameters**(\`firstParamWithDefault\`, \`requiredParam\`, \`optionalParam\`?, \`paramWithDefault\`?): \`void\`

This is a function with a parameters.

## Parameters

### firstParamWithDefault

\`boolean\` = \`true\`

### requiredParam

\`string\`

A normal parameter.

### optionalParam?

\`string\`

An optional parameter.

### paramWithDefault?

\`number\` = \`0\`

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithOptionalParameters()

\`\`\`ts
function functionWithOptionalParameters(
   firstParamWithDefault: boolean, 
   requiredParam: string, 
   optionalParam?: string, 
   paramWithDefault?: number): void
\`\`\`

This is a function with a parameters.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`firstParamWithDefault\` | \`boolean\` | \`true\` | - |
| \`requiredParam\` | \`string\` | \`undefined\` | A normal parameter. |
| \`optionalParam\`? | \`string\` | \`undefined\` | An optional parameter. |
| \`paramWithDefault\`? | \`number\` | \`0\` | - |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with optional parameters: (Output File Strategy "members") (Option Group "2") 2`] = `
"# Function: functionWithOptionalParameters()

\`\`\`ts
function functionWithOptionalParameters(
   firstParamWithDefault: boolean, 
   requiredParam: string, 
   optionalParam?: string, 
   paramWithDefault?: number): void
\`\`\`

This is a function with a parameters.

## Parameters

| Parameter | Type | Default value | Description |
| :------ | :------ | :------ | :------ |
| \`firstParamWithDefault\` | \`boolean\` | \`true\` | - |
| \`requiredParam\` | \`string\` | \`undefined\` | A normal parameter. |
| \`optionalParam\`? | \`string\` | \`undefined\` | An optional parameter. |
| \`paramWithDefault\`? | \`number\` | \`0\` | - |

## Returns

\`void\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with rest params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithRestParams()

> **functionWithRestParams**(\`param\`, ...\`restParams\`): \`boolean\`

Function with reset parmas

## Parameters

### param

\`string\`

### restParams

...\`string\`[]

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with rest params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithRestParams()

\`\`\`ts
function functionWithRestParams(param: string, ...restParams: string[]): boolean
\`\`\`

Function with reset parmas

## Parameters

| Parameter | Type |
| :------ | :------ |
| \`param\` | \`string\` |
| ...\`restParams\` | \`string\`[] |

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithTypeParameters()

> **functionWithTypeParameters**\\<\`T\`, \`Item\`\\>(): \`boolean\`

Function with type parameters

## Type Parameters

• **T**

Comments for T

• **Item** = \`string\` \\| \`boolean\`

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithTypeParameters()

\`\`\`ts
function functionWithTypeParameters<T, Item>(): boolean
\`\`\`

Function with type parameters

## Type Parameters

| Type Parameter | Default type | Description |
| :------ | :------ | :------ |
| \`T\` | - | Comments for T |
| \`Item\` | \`string\` \\| \`boolean\` | - |

## Returns

\`boolean\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with union params: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: functionWithUnionParams()

> **functionWithUnionParams**(\`primitiveUnions\`, \`objectUnions\`, \`mixedUnions\`, \`noUnions\`): \`undefined\`

## Parameters

### primitiveUnions

Comments for primitiveUnions

\`string\` | \`number\`

### objectUnions

Comments for objectUnionsUseful

\\{ \`a\`: \`string\`; \`b\`: \`1\`; \\} | \\{ \`a\`: \`number\`; \`b\`: \`1\`; \`c\`: \\{ \`x\`: \`string\`; \\}; \\}

### mixedUnions

Comments for mixedUnions

\`string\` | \`number\` |

\\{ \`a\`: \`string\`; \`b\`: \`string\`; \\}

Comments for mixedUnions

#### a

\`string\` = \`''\`

a comments

#### b

\`string\` = \`''\`

b comments

|

\\{ \`a\`: \\{ \`y\`: \`string\`; \`z\`: \`string\`; \\}; \\}

Comments for mixedUnions

#### a

\\{ \`y\`: \`string\`; \`z\`: \`string\`; \\}

Comments for a

#### a.y

\`string\`

#### a.z

\`string\`

### noUnions

\`string\`

Comments for noUnions

## Returns

\`undefined\`

## Source

[functions.ts:1](http://source-url)
"
`;

exports[`Function Reflection should compile function with union params: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Function: functionWithUnionParams()

\`\`\`ts
function functionWithUnionParams(
   primitiveUnions: string | number, 
   objectUnions: {
  a: string;
  b: 1;
 } | {
  a: number;
  b: 1;
  c: {
     x: string;
    };
 }, 
   mixedUnions: string | number | {
  a: string;
  b: string;
 } | {
  a: {
     y: string;
     z: string;
    };
 }, 
   noUnions: string): undefined
\`\`\`

## Parameters

| Parameter | Type | Description |
| :------ | :------ | :------ |
| \`primitiveUnions\` | \`string\` \\| \`number\` | Comments for primitiveUnions |
| \`objectUnions\` | \\{ \`a\`: \`string\`; \`b\`: \`1\`; \\} \\| \\{ \`a\`: \`number\`; \`b\`: \`1\`; \`c\`: \\{ \`x\`: \`string\`; \\}; \\} | Comments for objectUnionsUseful |
| \`mixedUnions\` | \`string\` \\| \`number\` \\| \\{ \`a\`: \`string\`; \`b\`: \`string\`; \\} \\| \\{ \`a\`: \\{ \`y\`: \`string\`; \`z\`: \`string\`; \\}; \\} | Comments for mixedUnions |
| \`noUnions\` | \`string\` | Comments for noUnions |

## Returns

\`undefined\`

## Source

[functions.ts:1](http://source-url)
"
`;
